--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -60,8 +60,32 @@ Eu tinha iniciado (faz um tempo) um código para retornar uma tabela de análise
 
 ** Seção empíricas
 
+- Feitas algumas pequenas correções no inglês
+- Dividida em duas subseções
+- [ ] Ajustadas proporções e qualidade dos gráficos
 - Gráficos foram adaptados para escala de cinza
+- Foram incluídas algumas referências empíricas
+- Foram deixadas marcas de edição para inclusão posterior da taxa própria (sugestão)
+- Incluída explicação da curva de concentração
+- [ ] Testado gráfico das curvas de concentração em diferentes axis
+
+
+** Modelo
+
+- [ ] Corrigidas referências quebradas (estavam com ??) desta seção
+
+** Analítica
+
+- [ ] Corrigidas referências quebradas (estavam com ??) desta seção
 
 ** Simulações
 
 - Gráficos foram adaptados para escala de cinza
+- Foram adicionados identificadores aos gráficos (A, B, C e D)
+- Correções de legenda nos gráficos
+- Gráfico das simulações com dados reais corrigido
+- Corrigida exportação para latex no Apêndice B
+- Retomado apêndice C
+- Corrigidas referências quebradas (estavam com ??) desta seção
+- [ ] Reduzido espaçamento entre título e o gráfico
+
